crearRestTemplateBuilder OK. additionalMessageConverters hecho con Arrays.asList() - compatible con Java 8